# Percolator-Prediction

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PREDICTION-MARKETS-PROPOSAL.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
match-pred/: Cargo.toml  README.md
match-pred/src/: lib.rs
sdk-pred/: README.md  package.json  tsconfig.json
sdk-pred/src/: index.ts
tests/: README.md  package.json  tsconfig.json
tests/src/: index.ts
