[workspace]
resolver = "2"
members = [
    "match-pred",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/0x-SquidSol/Percolator-Prediction"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
